chore: Fix overflow in navbar

--- a/web/src/layouts/Doc.css
+++ b/web/src/layouts/Doc.css
@@ -239,9 +239,10 @@ pre.astro-code {
     display: flex !important;
     overflow: unset !important;
     position: relative;
-    background-color: var(--background1) !important;
+    /* background-color: var(--background1) !important; */
 
     code {
+        background-color: unset;
         overflow: hidden;
 
         /* Diff markers */
